...
  -->

<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!-- default category -->
    <string name="category_1">Bills</string>
    <string name="category_2">Food</string>
    <string name="category_3">Leisure</string>
    <string name="category_4">Automobile</string>
    <string name="category_5">Education</string>
    <string name="category_6">Homeneeds</string>
    <string name="category_7">Healthcare</string>
    <string name="category_8">Insurance</string>
...
    <string name="subcategory_3">Gas</string>
    <string name="subcategory_4">Internet</string>
    <string name="subcategory_5">Rent</string>
    <string name="subcategory_6">Cable TV</string>
    <string name="subcategory_7">Water</string>
    <string name="subcategory_8">Groceries</string>
    <string name="subcategory_9">Dining out</string>
    <string name="subcategory_10">Movies</string>
    <string name="subcategory_11">Video Rental</string>
    <string name="subcategory_12">Magazines</string>
    <string name="subcategory_13">Maintenance</string>
    <string name="subcategory_14">Gas</string>
    <string name="subcategory_15">Parking</string>
...
