...
    <string name="db_payee_update_failed">Update payee failed</string>

    <!-- category / subcategory -->
    <string name="category">Category</string>
    <string name="subcategory">Sub Category</string>
    <string name="category_empty_list">No category found</string>
    <string name="select_category">Select Category</string>
    <string name="add_category">Add Category</string>
    <string name="add_subcategory">Add SubCategory</string>
    <string name="category_name">Category Name</string>
    <string name="edit_categoryName">Edit Category Name</string>
    <string name="delete_category">Delete Category</string>

...
    <string name="link">Link</string>
    <string name="logo">Logo</string>
    <string name="New">New</string>
    <string name="new_edit_transaction">New/Edit Transaction</string>
    <string name="refresh">Refresh</string>
    <string name="report_problem">Report a problem</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="sync">Sync</string>
    <string name="synchronize">Synchronize</string>
    <string name="synchronize_success">Synchronization completed successfully</string>
...
